deploy/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnpg-gui-frontend
  namespace: poyraz-system
  labels:
    app: cnpg-gui-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnpg-gui-frontend
  template:
    metadata:
      labels:
        app: cnpg-gui-frontend
    spec:
      containers:
      - name: frontend
        image: REPO/cnpg-gui-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cnpg-gui-frontend
  namespace: poyraz-system
spec:
  type: NodePort
  selector:
    app: cnpg-gui-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32449
